Fixing server stuff